# leis-municipais

./: .gitignore  Cargo.toml  Dockerfile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  create_new_tag.yml  quickstart.yml  release.yml
LeisMunicipais - Feira de Santana/Decretos Legislativos/: LeisMunicipais-com-br-Decreto-Legislativo-1-1971.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1972.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1973.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1974.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1975.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1976.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1977.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1978.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1979.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1980.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1982.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1983.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1984.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1985.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1986.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1987.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1988.html  LeisMunicipais-com-br-Decreto-Legislativo-1-1989.html  (+1413 more)
resources/: LeisMunicipais-com-br-Decreto-1-1984.html
src/: deserialize.rs  error.rs  main.rs  parser.rs  parser_async.rs  parser_executor.rs  parser_executor_async.rs  parser_executor_jwalk.rs  parser_executor_walkdir_rayon.rs
tests/: integration.rs
(+5011 files in other folders)
