[package]
name = "leis-municipais"
version = "0.1.0"
authors = ["Mateus Costa - mateuscomp@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unhtml = "0.7.5"
unhtml_derive = "0.7.5"
encoding_rs = "0.8.22"
encoding_rs_io = "0.1.7"
