[package]
name = "leis-municipais"
version = "0.1.0"
authors = ["Mateus Costa - mateuscomp@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.22"
encoding_rs_io = "0.1.7"
regex = "1.3.5"
walkdir = "2.3.1"
dissolve = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
