[package]
name = "leis-municipais"
version = "0.1.0"
authors = ["Mateus Costa - mateuscomp@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.22"
encoding_rs_io = "0.1.7"
regex = "1.3.5"
walkdir = "2.3.1"
#html_sanitizer = "0.1.1"
html_sanitizer = { git = "https://github.com/mrcosta/html_sanitizer", rev = "3a89dec342634dd2d1f0a94f110490fb7040ced3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_cmd = "0.12"
assert_fs = "0.13.1"
predicates = "1.0.4"
failure = "0.1.7"
prettytable-rs = "0.8.0"
